2023-11-14  Oliver Kiddle  <opk@zsh.org>

	* github #106: Matt Koscica: Completion/Unix/Command/_tmux,
	Util/check-tmux-state: update tmux completion (20230919)

	* unposted (cf. 52167): Completion/Unix/Command/_mutt:
	mutt's -a takes a list of files terminated by --

	* 52301: Completion/Unix/Command/_gem, Completion/Unix/Command/_ri,
	Completion/Unix/Command/_ruby: update options in completions for
	ruby 3.2, gem 3.4.10 and ri 6.5

	* 52300: Completion/Unix/Command/_ansible: ansible 2.15.2 updates

2023-11-09  Oliver Kiddle  <opk@zsh.org>

	* 52280: Completion/Unix/Command/_git: update git completion for new
	options in git through to version 2.42.0

2023-11-08  Oliver Kiddle  <opk@zsh.org>

	* github #105: Shotaro Aoyama: Completion/Zsh/Command/_zle:
	add "-I" for "zle" completion

	* Eric Cook: 52168: Completion/Unix/Command/_xfconf-query:
	add completion for xfce's xfconf-query(1)

	* 52271: Src/Modules/pcre.c: use correct form for unused parameter

2023-11-02  Oliver Kiddle  <opk@zsh.org>

	* 52268: Completion/Linux/Command/_networkmanager: update to 1.42.2

	* 52266: Completion/Linux/Command/_strace: update to 2.6.5

	* 52265: Completion/Linux/Command/_findmnt,
	Completion/Linux/Command/_lsblk, Completion/Unix/Command/_column:
	update completions for some util-linux tools to version 2.39.2

	* 52253: Src/Modules/pcre.c: support pcre callouts with shell
	evaluation of the callout string

	* 52260: Completion/Unix/Command/_sudo: handle variable assignments
	before the command in sudo completion

2023-11-01  Oliver Kiddle  <opk@zsh.org>

	* 52252: Src/Modules/pcre.c: Coverity defect 1547827

	* Shohei YOSHIDA: 52179: Completion/Unix/Command/_gradle:
	Fix gradlew completion when it isn't in PATH

2023-10-29  Matthew Martin  <phy1729@gmail.com>

	* github #102: Ulysse Buonomo: Completion/Unix/Command/_todo.sh:
	Ensure todo.sh completion uses builtin commands

2023-10-25  Bart Schaefer  <schaefer@zsh.org>
